--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "postprocessing": "^6.37.8",
     "react": "19.2.0",
