--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -47,7 +48,10 @@
     "date-fns": "^4.1.0",
     "dither-plugin": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.26.2",
+    "gsap": "^3.14.2",
     "input-otp": "^1.4.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
     "next": "^16.0.10",
@@ -57,6 +61,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.6",
     "react-use-measure": "^2.1.7",
     "recharts": "^2.15.4",
