--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
     "next": "^16.0.10",
+    "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "postprocessing": "^6.37.8",
     "react": "19.2.0",
