--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dither-plugin": "^1.1.1",
+    "dotted-map": "^2.2.3",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.26.2",
     "gsap": "^3.14.2",
